blocks/form/components/formhero/formhero.scss
@use '../../../../styles/settings' as *;

.wizard {
  .panel-formhero.current-wizard-step {
    display: flex;
    flex-direction: column;

    @include media('desktop') {
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      gap: $spacing-400;
    }

    legend {
      display: none;
    }
  }

  .panel-formhero.field-panelcontainer1751863678379 {
    display: flex;
    flex-direction: column;

    @include media('desktop') {
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      gap: $spacing-400;
    }
  }

  .panel-formhero__inner {
    @include media('desktop') {
      display: flex;
      align-items: center;
      justify-content: space-between;
      gap: $spacing-400;
    }
  }

  .panel-formhero__picture {
    margin-bottom: $spacing-600;
    max-width: 311px;

    display: none;

    @include media('tablet') {
      display: none;
    }

    @include media('desktop') {
      display: block;
      margin-bottom: 0;
      max-width: 458px;
      order: 1;
    }
  }

  .panel-formhero__content {
    order: 0;

    h2 {
      @include heading-level-1;
      margin-top: 0;
      margin-bottom: $spacing-500;
    }

    p {
      @include font-body-large;
      margin-bottom: 12px;
    }
  }

  .panel-formhero.field-intro3 {
    .panel-formhero__content {
      p {
        p {
          font-size: 28px;
          color: $text-dark;
          margin-bottom: $spacing-200;

          @include media('tablet') {
            font-size: 30px;
          }

          @include media('desktop') {
            font-size: 32px;
            margin-bottom: $spacing-300;
          }
        }
      }
    }
  }
}

